--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 jobs:
   github-metrics:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20
     steps:
       - uses: lowlighter/metrics@latest
         with:
