--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,14 +1,20 @@
 name: Metrics
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
   workflow_dispatch:
-  push:
-    branches: ["main"]
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
-    runs-on: ubuntu@latest
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.achievements.svg
