--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,11 +12,12 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Organization
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
-      - uses: lowlighter/metrics@latest
+      - name: Repositories achievements
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -25,24 +26,16 @@ jobs:
           plugin_achievements_only: polyglot, stargazer, deployer, member, maintainer, developer
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
-          
-      - name: Repositories traffic
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.traffic.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: repositories
-          plugin_traffic: yes
-          
+
       - name: Organization introduction
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.introduction.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          user: github
+          user: littlezo
           base: header
           plugin_introduction: yes
-          
+
       - name: Current year calendar
         uses: lowlighter/metrics@latest
         with:
@@ -50,7 +43,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_calendar: yes
-          
+
       - name: Full history calendar
         uses: lowlighter/metrics@latest
         with:
@@ -59,7 +52,7 @@ jobs:
           base: ""
           plugin_calendar: yes
           plugin_calendar_limit: 0
-          
+
       - name: Licenses with open-source ratio graphs
         uses: lowlighter/metrics@latest
         with:
@@ -72,15 +65,16 @@ jobs:
           plugin_licenses_setup: bash -c '[[ -f package.json ]] && npm ci || true'
           plugin_licenses_legal: no
           plugin_licenses_ratio: yes
-          
-      - uses: lowlighter/metrics@latest
+
+      - name: followup
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.followup.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_followup: yes
-
-      - uses: lowlighter/metrics@latest
+      - name: Icons
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.topics.icons.svg
           token: NOT_NEEDED
@@ -89,7 +83,8 @@ jobs:
           plugin_topics_limit: 0
           plugin_topics_mode: icons
 
-      - uses: lowlighter/metrics@latest
+      - name: wakatime
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.wakatime.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -98,8 +93,8 @@ jobs:
           plugin_wakatime_sections: time, languages-graphs
           plugin_wakatime_days: 365
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-
-      - uses: lowlighter/metrics@latest
+      - name: isocalendar fullyear
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
           token: ${{ secrets.METRICS_TOKEN }}
