--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -90,7 +90,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_wakatime: yes
-          plugin_wakatime_sections: time, languages-graphs
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_days: 365
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
       - name: isocalendar fullyear
