--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -94,7 +94,7 @@ jobs:
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
           plugin_notable: yes
-          plugin_notable_from: organization
+          plugin_notable_from: all
           plugin_notable_indepth: yes
           plugin_notable_repositories: yes
           plugin_notable_self: yes
